# shelly

./: .gitignore  CLAUDE.md  NEXTSTEPS.md  README.md  package-lock.json  package.json  tsconfig.frontend.json
scripts/: publish.sh  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: shelly-bridge.py
src-tauri/src/: hooks.rs  lib.rs  server.rs  sessions.rs
src/renderer/: index.html  renderer.ts  styles.css
